mail subject変更、ステータス異常時background-color変更

--- a/.env.sample
+++ b/.env.sample
@@ -4,7 +4,8 @@ SMART_LIST_CMD='ls /mnt/smart/'
 SMART_INFO_CMD='cat /mnt/smart/'
 TEMPLATE_PATH='templates/base.html'
 
-MAIL_SUBJECT='[hostname] S.M.A.R.T. Info'
+NAS_NAME=
+MAIL_SUBJECT='S.M.A.R.T. Info'
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=
